fixing layout bug where arrows weren't lining up

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,7 +38,7 @@ header {
 	}
 
 	.step1 { 
-		margin-left: 211px;
+		margin-left: 155px;
 		width: 215px;
 	}
 
